Fixes for distance tests.