@@ -44,17 +44,10 @@
         <ccg-io.version>1.1.0</ccg-io.version>
         <ccg-math.version>2.0.8</ccg-math.version>
         <big-math.version>2.3.0</big-math.version>
-        <!--
-        <ojalgo.version>48.0.0</ojalgo.version>
-        <ojalgo.version>48.3.2</ojalgo.version>
-        -->
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <maven.version>3.0.1</maven.version>
         <junit.version>5.7.0</junit.version>
-        <!--
-        <hamcrest.version>2.2</hamcrest.version>
-        -->
     </properties>
     
     <dependencies>
@@ -82,14 +75,6 @@
             <artifactId>big-math</artifactId>
             <version>${big-math.version}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.ojalgo/ojalgo -->
-        <!--
-        <dependency>
-            <groupId>org.ojalgo</groupId>
-            <artifactId>ojalgo</artifactId>
-            <version>${ojalgo.version}</version>
-        </dependency>
-        -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -102,32 +87,6 @@
             <version>5.6.0</version>
             <scope>test</scope>
         </dependency>
-        <!--
-        <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-library</artifactId>
-            <version>${hamcrest.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-java</artifactId>
-            <scope>test</scope>
-            <version>2.44.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.opera</groupId>
-            <artifactId>operadriver</artifactId>
-            <scope>test</scope>
-            <version>1.5</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.seleniumhq.selenium</groupId>
-                    <artifactId>selenium-remote-driver</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
@@ -156,17 +115,11 @@
                 <configuration>
                     <argLine>-Xms256m</argLine>
                 </configuration>
-                <!--
-                <version>2.22.2</version>
-                -->
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>3.0.0-M4</version>
-                <!--
-                <version>2.22.2</version>
-                -->
             </plugin>
         </plugins>
     </build>
@@ -203,19 +156,13 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>3.0.0-M4</version>
                         <configuration>
-                            <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=512m</argLine>
+                            <argLine>-Xms256m -Xmx512m</argLine>
                         </configuration>
-                        <!--
-                        <version>2.22.2</version>
-                        -->
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
                         <version>3.0.0-M4</version>
-                        <!--
-                        <version>2.22.2</version>
-                        -->
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
